# rsyslog

plugins/imuxsock/: Makefile.am
tools/: Makefile.am
